# red_repo

./: .env.example  .gitignore  Create_sqlite.py  Dockerfile  PostgreSQL_script.sql  README.md  class_translate.py  commands.py  db.py  dbwriter.py  docker-compose.yml  google_api.py  handlers.py  kb.py  lang_target.py  main.py  piccolo_conf.py  pyproject.toml  requirements.txt  settings.py  translate.py  translater-bot-intern-b9dec3a171bd.json
.github/workflows/: CI.yaml
bot/: CONST.py  exe.py  handlers.py  main.py  settings.py  translate.py
keyboards/: button.py  kb.py  kb2.py  kb_51.py  localization.py  localization_manager.py  paginator_taras.py  uk.json
redbot/: main.py
redbot/code/: echobot.py  settings.py
