[tool.poetry]
name = "red_intern"
version = "0.1.0"
description = "telegram bot as internship project"
authors = ["essayNEXT red team - red_team@ukr.net"]

# NOTE:
# without this explicit reference to PyPI, poetry may raise exception "PackageNotFound".
[[tool.poetry.source]]
name = "the_pypi"
url = "https://pypi.org/simple"
default = true

[tool.poetry.dependencies]
python = "^3.11"
uvloop = "^0.17.0"
aiohttp = {extras = ["speedups"], version = "^3.8.3"}
piccolo = {extras = ["all"], version = "^0.105.0"}
uvicorn = "^0.20.0"
python-dotenv = "^0.21.0"
asyncpg = "^0.27.0"
aiogram = "3.0.0b6"
pydantic = "^1.10.4"

[tool.poetry.dev-dependencies]
black = "^23.1.0"
mypy = "^0.991"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"